# Linnaeus

./: .gitignore  Cargo.toml  LICENCE  README.md  TestConfig.toml
kraken_docs/: RestDocs_20-oct-22.webarchive
kraken_enums/: Cargo.toml
kraken_enums/src/: lib.rs  tradeable_pairs.rs
linnaeus/: Cargo.toml
linnaeus/src/: lib.rs  test_helpers.rs  tests.rs
linnaeus/src/api/: mod.rs
linnaeus/src/api/market_data/: mod.rs  structs.rs  tests.rs
linnaeus/src/api/user_data/: mod.rs  structs.rs  tests.rs
linnaeus/src/api/user_staking/: mod.rs
linnaeus/src/api/user_trading/: mod.rs
linnaeus/src/kraken/: error.rs  mod.rs
linnaeus/src/websocket/: mod.rs
linnaeus_derive/: Cargo.toml
linnaeus_derive/src/: lib.rs
linnaeus_request/: Cargo.toml
linnaeus_request/src/: error.rs  lib.rs
linnaeus_ws/: Cargo.toml
linnaeus_ws/src/: Error.rs  error.rs  general_messages.rs  lib.rs  public_messages.rs  test_utils.rs
linnaeus_ws/src/messages/: general_messages.rs  mod.rs  private_messages.rs  public_messages.rs
linnaeus_ws/test_json/general/: system_status_b.json
linnaeus_ws/test_json/general/subscribe/: subscribe_ohlc.json  subscribe_own_trades.json
linnaeus_ws/test_json/general/subscription_status/: subscription_status_error.json  subscription_status_ohlc.json  subscription_status_own_trades.json  subscription_status_ticker.json
linnaeus_ws/test_json/general/unsubscribe/: unsubscribe_own_trades.json
linnaeus_ws/test_json/private/: own_trades.json
linnaeus_ws/test_json/private/add_order/request/: add_order_request_a.json
linnaeus_ws/test_json/private/cancel_all/: cancel_all_request.json  cancel_all_response.json
linnaeus_ws/test_json/private/cancel_all_orders_after/request/: cancel_all_orders_after_request_a.json  cancel_all_orders_after_request_b.json
linnaeus_ws/test_json/private/cancel_all_orders_after/response/: cancel_all_orders_after_response_a.json  cancel_all_orders_after_response_b.json
linnaeus_ws/test_json/private/cancel_order/: cancel_order_request.json
linnaeus_ws/test_json/private/edit_order/: edit_order_request.json  edit_order_response.json
linnaeus_ws/test_json/private/open_orders/: open_order_status_change.json  open_orders.json
linnaeus_ws/test_json/public/: spread_b.json
linnaeus_ws/test_json/public/book/: book_republish.json  book_republish_b.json  book_update_a.json  book_update_b.json  book_update_both.json
src/: lib.rs  utils.rs
src/kraken/: enums.rs  error.rs  market.rs  mod.rs
