[package]
name = "linnaeus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
serde-encrypt = "0.7"

thiserror = "1.0"
anyhow = "1.0"
strum = { version = "0.24", features = ["derive"] }

reqwest = { version = "0.11", features = ["json"] }
tungstenite = {version = "0.17", features =["rustls"]}


