[package]
name = "linnaeus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "2.0", features = [] }
serde_json = "1.0"
display_json = "0.2"
serde_urlencoded = "0.7"

strum = { version = "0.24", features = ["derive"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1.26"
rust_decimal_macros = "1.26"
uuid = { version = "1.1", features = ["v4", "serde"] }
derive-new = "0.5"
derive-getters = "0.2"
derive_setters = "0.1.5"
derive_builder = "0.11"
log = "0.4"
chrono_parser = "0.1.0"

reqwest = { version = "0.11", features = ["json"] }
http = "0.2"

linnaeus_request = { path = "../linnaeus_request" }
linnaeus_ws = { path = "../linnaeus_ws" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
pretty_assertions = "1.2"
simple_logger = "2.3"
config = "0.13.1"
