[package]
name = "linnaeus_request"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "2.0", features = [] }
serde_json = "1.0"
serde_urlencoded = "0.7"

display_json = "0.2"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
base64 = "0.13"
reqwest = { version = "0.11", features = ["json"] }
http = "0.2"
log = "0.4"
strum = { version = "0.24", features = ["derive"] }
derive-getters = "0.2"

[dev-dependencies]
anyhow = "1.0"
pretty_assertions = "1.2"
