[package]
name = "linnaeus_ws"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "2.0", features = ["chrono_0_4"] }
serde_repr = "0.1"
serde_json = "1.0"
display_json = "0.2"
strum = { version = "0.24", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1.26"
rust_decimal_macros = "1.26"
uuid = { version = "1.1", features = ["v4", "serde"] }
derive-new = "0.5"
derive-getters = "0.2"
derive_setters = "0.1.5"
log = "0.4"
