[package]
name = "linnaeus_ws"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "2.0", features = ["chrono_0_4"] }
serde_repr = "0.1"
serde_json = "1.0"
display_json = "0.2"
strum = { version = "0.24", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1.26"
rust_decimal_macros = "1.26"
uuid = { version = "1.1", features = ["v4", "serde"] }
derive-new = "0.5"
derive-getters = "0.2"
derive_setters = "0.1.5"
log = "0.4"
tokio-tungstenite = {version = "0.17", features=["native-tls"]}
url= {version = "2.3", features = ["serde"]}
dashmap = {version="5.4.0", features = ["serde"]}
futures = "0.3"
ahash = "0.8.2"

[dev-dependencies]
anyhow = "1.0"
pretty_assertions = "1.2"
simple_logger = "2.3"
once_cell = "1.16.0"